# clipboard-mcp

./: .gitignore  MCP_DEBUGGING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_server.py
scripts/: run-server-quiet.sh  run-server.sh  test-server.sh
src/clipboard_mcp/: __init__.py  database.py  monitor.py  schema.sql  server.py  url_fetcher.py
tests/: __init__.py  test_clipboard_integration.py  test_enhanced_clipboard.py  test_example.py  test_mcp_client.py
